--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^3.4.1",
     "dotenv": "^16.3.1",
+    "express-session": "^1.17.3",
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
